# lidar_hd_ground_mapping

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
launch/: ground_mapping.launch
nodes/ground_height_field/: test_raytracing.cpp  test_raytracing_gridmap.cpp  test_raytracing_velodyne.cpp
nodes/ground_height_field/include/: ray_tracing.h  ray_tracing.tcc
